# splitshot

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_PLAN.md  Directions.md  IDPA.csv  LICENSE  README.md  SECURITY.md  chat.md  consistency.md  implementation_prompt.md  modular.md  pyproject.toml  rest.md  splits.md
.codex/environments/: environment.toml
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: practiscore-sync.instructions.md
.github/workflows/: ci.yml
artifacts/: auto-training-pipeline-clean-summary.json  auto-training-pipeline-summary.json  browser-interaction-audit-latest.json  browser-ui-safari-audit-20260414.json  browser-ui-surface-audit-20260414.json  browser-ui-surface-audit-latest.json  model-training-auto-clean-summary.json  model-training-auto-h32-a085-summary.json  model-training-auto-summary.json  model-training-summary.json  old-vs-old-plus-new-comparison.json  shot-preview-stage3-review-suggestions.json  stage2test-analysis.json  stage_suite_analysis.csv  timing-accuracy-summary.json  timing-baseline-original-autolabel-summary.json  timing-baseline-original-manifest.json  timing-baseline-original-summary.json  training-autolabel-summary.json  training-corpus-audit.json  training-dataset-auto-clean-summary.json  training-dataset-auto-clean.npz  training-dataset-auto-summary.json  training-dataset-auto.npz  training-dataset-summary.json  training-dataset-verified-summary.json  training-dataset-verified.npz  training-dataset.npz  training-review-queue.json
development/: agentstatus.md  final-validation-proof.md  plan-index.md  subagent-orchestration-prompt.md  task-a-auth-session-foundation.md  task-a-proof-of-completion.md  task-b-acquisition-normalization.md  task-b-proof-of-completion.md  task-c-proof-of-completion.md  task-c-ui-parity-governance.md  user-workflow-simple-steps.md
docs/: ARCHITECTURE.md  BROWSER_AV_HARDENING_PLAN.md  DEVELOPING.md  Directions.md  LIMITATIONS.md  MARKDOWN_INDEX.md  README.md  USER_GUIDE.md  backlog.md
docs/analysis/: SHOTML.md  stage02test-investigation-plan.md  (+1 more)
packaging/: README.md  build_macos.sh  build_windows.ps1  splitshot.spec
scripts/: README.md  export_stage_suite_csv.py  run_browser_av_audit.py  run_browser_export_matrix.py  run_browser_interaction_audit.py  run_browser_ui_surface_audit.py  setup_splitshot.ps1  setup_splitshot.sh  validate_toolchain.py
tests/: conftest.py  test_analysis.py  test_browser_control.py  test_browser_static_ui.py  test_cli.py  test_export.py  test_main_window.py  test_media_toolchain.py  test_persistence.py  test_practiscore_import.py  test_presentation.py  test_scoring_and_merge.py  test_stage_raw_benchmark.py  test_stage_suite_csv.py  test_ui_widgets.py
(+281 files in other folders)
