[project]
name = "splitshot"
version = "0.1.0"
description = "Local-first desktop app for competition shooting video analysis and export."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2.1,<3",
  "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-qt>=4.4,<5",
]

[project.scripts]
splitshot = "splitshot.__main__:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splitshot"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
qt_api = "pyside6"

[tool.ruff]
line-length = 100
