[project]
name = "splitshot"
version = "0.1.0"
description = "Local-first browser app for competition shooting video analysis, scoring, merge review, and export."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "numpy>=2.1,<3",
  "PySide6>=6.8,<7",
]

[project.optional-dependencies]
dev = [
  "playwright>=1.58,<2",
  "pytest>=8.3,<9",
  "pytest-qt>=4.4,<5",
]

[project.scripts]
splitshot = "splitshot.cli:main"
splitshot-benchmark-csv = "splitshot.benchmarks.cli:main"
splitshot-web = "splitshot.browser.cli:main"
splitshot-desktop = "splitshot.cli:desktop_main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splitshot"]

[tool.hatch.build.targets.wheel.force-include]
"src/splitshot/browser/static" = "splitshot/browser/static"
"src/splitshot/resources" = "splitshot/resources"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
qt_api = "pyside6"

[tool.uv]
link-mode = "copy"

[tool.ruff]
line-length = 100
